--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                 <li>bonobash</li>
             </ul>
         </section>
+        <section id="places-container" class="large-text">
+            <ul id="places-ul">
+                <li>Cumilla</li>
+                <li>Dhaka</li>
+                <li>Chittagong</li>
+                <li>Sylhet</li>
+            </ul>
+        </section>
         <section class="fruits-container">
             <h1 id="fruits-name" class="some-class hello-class blue-bg">Fruits</h1>
             <ul>
@@ -37,6 +45,7 @@
     </main>
     <script src="js/dom.js"></script>
     <script src="js/styeleInJS.js"></script>
+    <script src="js/append.js"></script>
     <script>
         const liCollections = document.getElementsByTagName('li');
         // console.log(liCollections);
