--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <h1>Welcome to my DOM</h1>
     </header>
-    <main>
+    <main id="main-content">
         <section>
             <h1>My Awesome DOM</h1>
             <ul>
@@ -27,7 +27,7 @@
             </ul>
         </section>
         <section id="places-container" class="large-text">
-            <ul id="places-ul">
+            <ul id="places-list">
                 <li>Cumilla</li>
                 <li>Dhaka</li>
                 <li>Chittagong</li>
@@ -44,8 +44,8 @@
         </section>
     </main>
     <script src="js/dom.js"></script>
-    <script src="js/styeleInJS.js"></script>
     <script src="js/append.js"></script>
+    <script src="js/styeleInJS.js"></script>
     <script>
         const liCollections = document.getElementsByTagName('li');
         // console.log(liCollections);
